<resources>
    <string name="app_name">HelloWorld</string>
    <string name="hello_world">你好，世界</string>
    <string name="second_name">welcome to second page2!</string>
    <string name="second_hello_px">你好，世界（px大小）</string>
    <string name="second_hello_dp">你好，世界（dp大小）</string>
    <string name="second_hello_sp">你好，世界（sp大小）</string>
    <string name="target_control">目标控件</string>
    <string name="click_jump_xml">点击并查看点击效果</string>
    <string name="click_jump1">点击跳转字体页面</string>
    <string name="click_jump2">点击跳转到列表页面</string>
    <string name="show_click_res">这里查看button点击的结果</string>
    <string name="bt_jump2car_text">点击跳转到car页面</string>
    <string name="lpb_iv_item1_desc">lpb_iv_item1_image</string>
</resources>