<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="#00ff00"
        android:text="@string/hello_world"
        app:layout_constraintBottom_toBottomOf="@id/bt_click2jump_xml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_click2jump_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doClick"
        android:text="@string/click_jump_xml"
        app:layout_constraintBottom_toTopOf="@+id/bt_click2jump1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <Button
        android:id="@+id/bt_click2jump1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_jump1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello"/>

    <Button
        android:id="@+id/bt_click2jump2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_jump2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_click2jump1"/>

    <TextView
        android:id="@+id/tv_click_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_click_res"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_click2jump2"
        app:layout_constraintStart_toStartOf="@+id/bt_click2jump2"
        app:layout_constraintTop_toBottomOf="@+id/bt_click2jump2" />

</androidx.constraintlayout.widget.ConstraintLayout>